[gd_scene load_steps=37 format=2]

[ext_resource path="res://characters/enemies/special_bosses/medusa/assets/BarV8_Bar.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/special_bosses/medusa/assets/BarV8_ProgressBar.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/special_bosses/medusa/assets/Medusa-Merged-Sheet.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/special_bosses/medusa/scripts/Medusa.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=47]
radius = 7.33333
height = 33.3333

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/PlayerDetectionAttackCollision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14.6667, 24.8333 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/PlayerDetectionAttackCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 27.3333, -2.16667 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/PlayerDetectionAttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack1"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42, 43, 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/PlayerDetectionAttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/PlayerDetectionAttackCollision:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11.1667, 16.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/PlayerDetectionAttackCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 23.8333, -10.5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack2"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/PlayerDetectionAttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/PlayerDetectionAttackCollision:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 22.3333, 19.3333 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/PlayerDetectionAttackCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 31.3333, 4.33334 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 84, 85, 86, 87, 88, 89 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/PlayerDetectionAttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/PlayerDetectionAttackCollision:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14.6667, 24.8333 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/PlayerDetectionAttackCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 27.3333, -2.16667 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/PlayerDetectionAttackCollision:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14.6667, 24.8333 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/PlayerDetectionAttackCollision:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 27.3333, -2.16667 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/PlayerDetectionAttackCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "spell"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/PlayerDetectionAttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/PlayerDetectionAttackCollision:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21, 7.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/PlayerDetectionAttackCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 44, -11.5 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/PlayerDetectionAttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/PlayerDetectionAttackCollision:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14.6667, 24.8333 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackArea/PlayerDetectionAttackCollision:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 27.3333, -2.16667 ) ]
}

[sub_resource type="Animation" id=48]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=49]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=50]
resource_name = "weak_hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.478431, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "attack1"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=56]
animation = "spell"

[sub_resource type="AnimationNodeAnimation" id=57]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=65]

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachineTransition" id=67]

[sub_resource type="AnimationNodeStateMachineTransition" id=68]

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachine" id=35]
states/attack1/node = SubResource( 52 )
states/attack1/position = Vector2( 274, 102 )
states/attack2/node = SubResource( 53 )
states/attack2/position = Vector2( 748, 102 )
states/death/node = SubResource( 54 )
states/death/position = Vector2( 748, 216 )
states/idle/node = SubResource( 55 )
states/idle/position = Vector2( 522, -7 )
states/spell/node = SubResource( 56 )
states/spell/position = Vector2( 522, 216 )
states/walk/node = SubResource( 57 )
states/walk/position = Vector2( 522, 102 )
transitions = [ "idle", "walk", SubResource( 58 ), "walk", "attack1", SubResource( 59 ), "attack1", "walk", SubResource( 60 ), "walk", "attack2", SubResource( 61 ), "attack2", "walk", SubResource( 62 ), "walk", "spell", SubResource( 63 ), "spell", "walk", SubResource( 64 ), "walk", "death", SubResource( 65 ), "spell", "death", SubResource( 66 ), "attack2", "death", SubResource( 67 ), "attack1", "death", SubResource( 68 ), "idle", "death", SubResource( 69 ) ]
start_node = "idle"
graph_offset = Vector2( -17, -38 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=36]

[sub_resource type="RectangleShape2D" id=51]
extents = Vector2( 14.6667, 24.8333 )

[node name="Medusa" type="KinematicBody2D" groups=["Boss", "Enemy"]]
scale = Vector2( 3, 3 )
collision_layer = 8
collision_mask = 81
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 11, 0 )
texture = ExtResource( 3 )
hframes = 12
vframes = 11

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 47 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack1 = SubResource( 3 )
anims/attack2 = SubResource( 4 )
anims/death = SubResource( 5 )
anims/idle = SubResource( 7 )
anims/spell = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 48 )
anims/hit = SubResource( 49 )
anims/weak_hit = SubResource( 50 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 35 )
anim_player = NodePath("../Animation")
parameters/playback = SubResource( 36 )

[node name="PlayerDetectionAttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="PlayerDetectionAttackCollision" type="CollisionShape2D" parent="PlayerDetectionAttackArea"]
position = Vector2( 23.6667, -10.5 )
shape = SubResource( 51 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 20

[node name="PlayerDetectionAttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 27.3333, -2.16667 )
shape = SubResource( 51 )
disabled = true

[node name="Raycasts" type="Node2D" parent="."]

[node name="NoFloorRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 29 )

[node name="PlayerDetectionDialogRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 23.3333 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 4

[node name="SpellRange" type="RayCast2D" parent="Raycasts"]
position = Vector2( 23, -4 )
enabled = true
cast_to = Vector2( 40, 0 )
collision_mask = 4

[node name="PlayerOnBackRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( -23.6667, 0 )
enabled = true
cast_to = Vector2( -80, 0 )
collision_mask = 4

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -41.0
margin_top = -35.0
margin_right = 233.0
margin_bottom = -10.0
rect_scale = Vector2( 0.3, 0.3 )
max_value = 2000.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
texture_progress_offset = Vector2( 2, 2 )
tint_under = Color( 1, 0, 0, 1 )

[connection signal="body_entered" from="PlayerDetectionAttackArea" to="." method="_on_PlayerDetectionAttackArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionAttackArea" to="." method="_on_PlayerDetectionAttackArea_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
